# fsnav

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: bookmarks.rs  file_entry.rs  main.rs  navigator.rs  permissions.rs  preview.rs  search.rs  split_pane.rs  ui.rs
src/managers/: mod.rs  ownership.rs
src/models/: exit_action.rs  file_entry.rs  mod.rs
src/ui/: components.rs  mod.rs  renderer.rs
src/utils/: mod.rs  patterns.rs  system.rs
