[package]
name = "fsnav"
version = "0.2.1"
edition = "2021"
authors = ["Alexandre Artaud <smlartaudalexandre@gmail.com>"]
description = "A fast terminal file navigator with interactive chmod/chown management for root users"
documentation = "https://docs.rs/fsnav"
homepage = "https://github.com/AlexArtaud-Dev/fsnav"
repository = "https://github.com/AlexArtaud-Dev/fsnav"
readme = "README.md"
keywords = ["cli", "terminal", "file-manager", "tui", "navigation"]
categories = ["command-line-utilities", "filesystem", "os::unix-apis"]
license = "MIT"
exclude = [".github/", ".gitignore", "tests/fixtures/"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]

[dependencies]
crossterm = "0.28"
anyhow = "1.0"
regex = "1.10"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "fsnav"
path = "src/main.rs"

[badges]
maintenance = { status = "actively-developed" }

